2006-05-18  Dan Winship  <danw@novell.com>

	* src/session.c (saveYourselfCallback): if we have a
	RestartCommand registered with the session manager, update the
	--sm-client-id in it to match the id we were assigned. bnc 176746

	* src/main.c (main, usage): remove unused --sm-save-file arg and
	fix documentation of --sm-client-id.

2006-05-17  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in: Regen (Overlay Icon).

	* plugins/switcher.c (switchPaintScreen): Don't remove switcher
	from window list, just temporarily mark it as destroyed. This fixes
	issue with switcher decorations disappearing when some window is
	unmapped.

	* src/screen.c (updateDefaultIcon): width and height should be
	unsigned.

	* gnome/window-decorator/gnome-window-decorator.c: Add minimal
	option that can be used to run g-w-d with drop-shadows but without full
	window decorations.

	* plugins/minimize.c (minHandleEvent): Restore window position
	when transitioning to withdrawn state.

	* plugins/scale.c: Remove next_window binding and fix so that arrow
	keys can be used to select window.
	Focus new window when pointer enter window decorations and sloppy focus
	is used.
	Remove scaleSelectWindow.

	* plugins/scale.c: Icon support (Nat Friedman).

2006-05-17  Dan Winship  <danw@novell.com>

	* src/display.c (handleSelectionClear, eventLoop): don't process
	exit-on-selection-clear until the event queue is empty, or else
	MapRequest and ConfigureRequest events could get lost. bnc 175558

2006-05-14  David Reveman  <davidr@novell.com>

	* src/event.c (handleEvent): mapNum might be 0 if we found the window
	unmapped when trying to bind it to a texture.

2006-05-12  David Reveman  <davidr@novell.com>

	* src/screen.c (enterShowDesktopMode): Only go into show desktop mode
	when some window is being hidden.

	* src/event.c (handleWindowDamageRect): Make sure placed is set to true
	when no plugin is doing placement.
	(handleEvent): Don't set WM_STATE on override redirect windows.
